# nwps

./: .gitignore  README.md  relnotes.readme  relnotes.readme.v1.4.0
IT_NWPS_WCOSS_ver1.0_20150729/: POC_WFOS.txt
def/: newest.para  nwps_prod_para_diff.txt  para.def  prod.def  prod_dump.def
dev/: README.devwcoss
doc/: POC_WFOS.txt  relnotes.readme  relnotes.readme.v1.3.9  relnotes.readme.v1.4.0  relnotes.readme.v1.4.1  relnotes.readme.v1.4.10  relnotes.readme.v1.4.12  relnotes.readme.v1.4.3  relnotes.readme.v1.4.5  relnotes.readme.v1.4.6  relnotes.readme.v1.4.9
ecf/: jcheck_late_jobs.ecf  jnwps_datachk.ecf  jnwps_estofs_prep.ecf  jnwps_forecast_cg1.ecf  jnwps_forecast_cgn.ecf  jnwps_ofs_prep.ecf  jnwps_post_cg1.ecf  jnwps_post_cgn.ecf  jnwps_prdgen_cg0.ecf  jnwps_prdgen_cg1.ecf  jnwps_prdgen_cgn.ecf  jnwps_prep.ecf  jnwps_psurge_prep.ecf  jnwps_rtofs_prep.ecf  jnwps_stofs_prep.ecf  jnwps_wavetrack_cg1.ecf
env/: detect_machine.sh  module-setup.sh
jobs/: JNWPS_DATACHK  JNWPS_DATACHK.saveOrig  JNWPS_DATACHK.turnoff_rzdm  JNWPS_FORECAST  JNWPS_OFS_PREP  JNWPS_POST  JNWPS_PRDGEN  JNWPS_PREP  JNWPS_WAVETRACK
lib/: build.sh  make_netcdf-4.2.sh
modulefiles/: build_nwps.modules  build_nwps.modules.lua  nwps_common.lua  nwps_hera.lua  nwps_wcoss2.lua
parm/: test_hist  transfer_nwps.list  transfer_nwps_nwges.list  transfer_nwps_nwges_histlog.list  transfer_nwps_nwges_hotstart1.list  transfer_nwps_nwges_hotstart2.list  transfer_nwps_nwges_hotstart3.list  transfer_nwps_nwges_hotstart4.list  wfo.tbl  (+4 more)
sorc/memwatch-2.71/: Makefile.in  config-win.sh  configure.ac
(+2812 files in other folders)
